# nvm-shmup

./: Cargo.toml  DESIGN.md  README.md
assets/src/: ship.blend
crates/game/: Cargo.toml
crates/game/examples/: follower.rs
crates/game/src/: camera.rs  cooldown.rs  damage.rs  interp.rs  lib.rs  main.rs  path.rs  path_follower.rs  player.rs  plugin.rs  prism.rs  transform.rs  util.rs
crates/game/src/curve/: bezier.rs  bezier_order_2.rs  bezier_order_3.rs  mod.rs
crates/game/src/damage/: mod.rs  shape.rs  target.rs
crates/game/src/input/: axis.rs  button.rs  mod.rs  unified.rs  util.rs
crates/game/src/player/: controller.rs  input.rs  input_axis.rs  input_map.rs  mod.rs  util.rs
crates/game/src/projectile/: builder.rs  commands.rs  mod.rs  plugin.rs  styles.rs
crates/game/src/tags/: mod.rs  systems.rs  teams.rs
crates/game/src/transform/: mod.rs  plugin.rs  position2d.rs  rotation2d.rs  transform2d.rs  util.rs
crates/lib_collide/: Cargo.toml
crates/lib_collide/examples/: ray_tests.rs  shape_tests.rs  util.rs
crates/lib_collide/src/: lib.rs
crates/lib_collide/src/ray/: ray_caster.rs  ray_intersection.rs  ray_target.rs
crates/lib_collide/src/shape/: ball.rs  box_aligned.rs  box_aligned_round.rs  box_oriented.rs  box_oriented_boxy.rs  box_oriented_boxy_round.rs  box_oriented_round.rs  mod.rs  polygon_small.rs  polygon_small_round.rs  ramp.rs  ramp_boxy.rs  ramp_boxy_round.rs  ramp_round.rs  shape_combined.rs  shape_common.rs  shape_debug.rs  shape_moving.rs  shape_static.rs  util.rs
crates/lib_curve/: Cargo.toml
crates/lib_curve/examples/: bezier_pg.rs
crates/lib_curve/src/: bezier.rs  bezier_order_1.rs  bezier_order_2.rs  bezier_order_3.rs  lib.rs
crates/lib_strid/: Cargo.toml
crates/lib_strid/src/: lib.rs  smol_str.rs
