[workspace]
resolver="2"
members = [
    "crates/lib_collide",
    "crates/lib_curve",
    "crates/game",
]

[workspace.dependencies]
bevy        = { git = "https://github.com/bevyengine/bevy.git", rev = "90845267947fc6f1de6780048d4d552235bbb093", features = ["dynamic_linking"] }
nvm_curve   = { path = "crates/lib_curve" }
nvm_collide = { path = "crates/lib_collide" }

[workspace.lints.clippy]
all                            = "warn" 
alloc_instead_of_core          = "warn"
as_underscore                  = "warn"
clone_on_ref_ptr               = "warn"
create_dir                     = "warn"
empty_structs_with_brackets    = "warn"
error_impl_error               = "warn"
exit                           = "warn"
filetype_is_file               = "warn"
fn_to_numeric_cast_any         = "warn"
format_push_string             = "warn"
if_then_some_else_none         = "warn"
missing_const_for_fn           = "warn"
mixed_read_write_in_expression = "warn"
panic_in_result_fn             = "warn"
partial_pub_fields             = "warn"
pedantic                       = "warn"
std_instead_of_core            = "warn"
str_to_string                  = "warn"
string_to_string               = "warn"
tests_outside_test_module      = "warn"
undocumented_unsafe_blocks     = "warn"
unnecessary_safety_comment     = "warn"
unnecessary_safety_doc         = "warn"
unseparated_literal_suffix     = "warn"

cast_lossless                  = "allow"
cast_possible_truncation       = "allow"
cast_possible_wrap             = "allow"
cast_precision_loss            = "allow"
cast_sign_loss                 = "allow"
missing_docs_in_private_items  = "allow"
missing_errors_doc             = "allow"
module_name_repetitions        = "allow"
needless_pass_by_value         = "allow"
shadow_unrelated               = "allow"       
missing_panics_doc             = "allow" 
unwrap_in_result               = "allow"
many_single_char_names         = "allow"
match_same_arms                = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
